starting portfolio project

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Filimone Lea'aetoa | Web Developer</title>
+  <title>Filimone Lea'aetoa | Full-Stack Developer</title>
   <meta name="description" content="Filimone is a professional web developer">
   <meta name="robot" content="index, follow"> 
   <link rel="stylesheet" href="css/style.css">
