--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Filimone Lea'aetoa | Full-Stack Developer</title>
-  <meta name="description" content="Filimone is a professional web developer">
-  <meta name="robot" content="index, follow"> 
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="/images/elon_musk_icon_176334.svg">
-  <script src="script.js" defer></script>
-</head>
-<body>
-  <h1>Filimone Lea'aetoa</h1>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Filimone Lea'aetoa | Full-Stack Developer</title>
+    <meta name="description" content="Filimone is a professional web developer">
+    <meta name="robot" content="index, follow"> 
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="/images/elon_musk_icon_176334.svg">
+    <script src="script.js" defer></script>
+  </head>
+  <body>
+    <section class="showcase">
+      <header>
+        <h2 class="logo">Filimone Lea'aetoa</h2>
+        <div class="toggle"></div>
+      </header>
+      <video src="css/images/night-sky.mp4" muted loop autoplay></video>
+
+      <div class="overlay"></div>
+      
+      <div class="text">
+        <h2>Never Stop</h2>
+        <h3>Exploring The World</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic eius ab quod qui, praesentium laudantium natus quo dolorum voluptatum saepe id adipisci consequuntur molestiae nulla. Enim rerum quaerat itaque nam.</p>
+      </div>
+    </section>
+  </body>
 </html>
