added font awesome script to header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="/images/elon_musk_icon_176334.svg">
     <script src="script.js" defer></script>
+    <script src="https://kit.fontawesome.com/589dc5df0f.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <section class="showcase">
@@ -19,12 +20,20 @@
       <video src="css/images/night-sky.mp4" muted loop autoplay></video>
 
       <div class="overlay"></div>
-      
+
       <div class="text">
         <h2>Never Stop</h2>
         <h3>Exploring The World</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic eius ab quod qui, praesentium laudantium natus quo dolorum voluptatum saepe id adipisci consequuntur molestiae nulla. Enim rerum quaerat itaque nam.</p>
+        <a href="#">Projects</a>
       </div>
+
+      <ul class="socials">
+        <li><i class="fab fa-facebook"></i></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
     </section>
   </body>
 </html>
