big design changes - added link to socials - checkpoint

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
   </head>
   <body>
     <section class="showcase">
+
       <header>
         <h2 class="logo">Filimone Lea'aetoa</h2>
         <div class="toggle"></div>
       </header>
+
       <video src="css/images/night-sky.mp4" muted loop autoplay></video>
 
       <div class="overlay"></div>
@@ -29,11 +31,22 @@
       </div>
 
       <ul class="socials">
-        <li><i class="fab fa-facebook"></i></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li><a href="https://www.linkedin.com/in/filimonel/" target="_blank"><i class="fab fa-linkedin fa-5x"></i></a></li>
+        <li><a href="https://github.com/filimonel" target="_blank"><i class="fab fa-github-square fa-5x"></i></a></li>
+        <li><a href="#"><i class="fas fa-envelope-square fa-5x"></i></a></li>
       </ul>
+
     </section>
+
+    <div class="menu">
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">Projects</a></li>
+        <li><a href="">Technology</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+    </div>
+
   </body>
 </html>
