completed hero section of portfolio

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <header>
         <h2 class="logo">Filimone Lea'aetoa</h2>
-        <div class="toggle"></div>
+        <div class="menu-btn"></div>
       </header>
 
       <video src="css/images/night-sky.mp4" muted loop autoplay></video>
