--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="showcase">
 
       <header>
-        <h2 class="logo">Filimone Lea'aetoa</h2>
+        <img class="logo" src="css/images/FLO.png" alt="">
         <div class="menu-btn"></div>
       </header>
 
