finished hero page

--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
       <div class="overlay"></div>
 
       <div class="text">
-        <h2>Never Stop</h2>
-        <h3>Exploring The World</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic eius ab quod qui, praesentium laudantium natus quo dolorum voluptatum saepe id adipisci consequuntur molestiae nulla. Enim rerum quaerat itaque nam.</p>
-        <a href="#">Projects</a>
+        <h3>Filimone Lea'aetoa</h3>
+        <p>Full-Stack Developer based in Melbourne, Australia</p>
+        <a href="#">About me</a>
       </div>
 
       <ul class="socials">
@@ -47,6 +46,10 @@
         <li><a href="">Contact</a></li>
       </ul>
     </div>
+
+    <section class="about-me">
+
+    </section>
 
   </body>
 </html>
