changed section to div

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/589dc5df0f.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <section class="showcase">
+    <div class="showcase">
 
       <header>
         <img class="logo" src="css/images/FLO.png" alt="">
@@ -35,7 +35,7 @@
         <li><a href="#"><i class="fas fa-envelope-square fa-5x"></i></a></li>
       </ul>
 
-    </section>
+    </div>
 
     <div class="menu">
       <ul>
@@ -47,9 +47,9 @@
       </ul>
     </div>
 
-    <section class="about-me">
+    <div class="about-me">
 
-    </section>
+    </div>
 
   </body>
 </html>
