--- a/index.html
+++ b/index.html
@@ -7,45 +7,45 @@
     <meta name="description" content="Filimone is a professional web developer">
     <meta name="robot" content="index, follow"> 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="/images/elon_musk_icon_176334.svg">
+    <link rel="icon" href="css/images/FLO.png">
     <script src="script.js" defer></script>
     <script src="https://kit.fontawesome.com/589dc5df0f.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="showcase">
+    
+      <section class="showcase">
 
-      <header>
-        <img class="logo" src="css/images/FLO.png" alt="">
-        <div class="menu-btn"></div>
-      </header>
+        <header>
+          <img class="logo" src="css/images/FLO.png" alt="">
+          <div class="menu-btn"></div>
+        </header>
 
-      <video src="css/images/night-sky.mp4" muted loop autoplay></video>
+        <video src="css/images/mountain.mp4" muted loop autoplay></video>
 
-      <div class="overlay"></div>
+        <div class="overlay"></div>
 
-      <div class="text">
-        <h3>Filimone Lea'aetoa</h3>
-        <p>Full-Stack Developer based in Melbourne, Australia</p>
-        <a href="#">About me</a>
+        <div class="text">
+          <h3>Filimone Lea'aetoa</h3>
+          <p>Full-Stack Developer based in Melbourne, Australia</p>
+          <a href="#">About me</a>
+        </div>
+
+        <ul class="socials">
+          <li><a href="https://www.linkedin.com/in/filimonel/" target="_blank"><i class="fab fa-linkedin fa-5x"></i></a></li>
+          <li><a href="https://github.com/filimonel" target="_blank"><i class="fab fa-github-square fa-5x"></i></a></li>
+          <li><a href="#"><i class="fas fa-envelope-square fa-5x"></i></a></li>
+        </ul>
+
+      </section>
+
+      <div class="menu">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Projects</a></li>
+          <li><a href="">Technology</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
       </div>
-
-      <ul class="socials">
-        <li><a href="https://www.linkedin.com/in/filimonel/" target="_blank"><i class="fab fa-linkedin fa-5x"></i></a></li>
-        <li><a href="https://github.com/filimonel" target="_blank"><i class="fab fa-github-square fa-5x"></i></a></li>
-        <li><a href="#"><i class="fas fa-envelope-square fa-5x"></i></a></li>
-      </ul>
-
-    </div>
-
-    <div class="menu">
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Projects</a></li>
-        <li><a href="">Technology</a></li>
-        <li><a href="">Blog</a></li>
-        <li><a href="">Contact</a></li>
-      </ul>
-    </div>
 
     <div class="about-me">
 
