added more sections

--- a/index.html
+++ b/index.html
@@ -30,26 +30,38 @@
           <a href="#">About me</a>
         </div>
 
-        <ul class="socials">
-          <li><a href="https://www.linkedin.com/in/filimonel/" target="_blank"><i class="fab fa-linkedin fa-5x"></i></a></li>
-          <li><a href="https://github.com/filimonel" target="_blank"><i class="fab fa-github-square fa-5x"></i></a></li>
-          <li><a href="#"><i class="fas fa-envelope-square fa-5x"></i></a></li>
-        </ul>
-
       </section>
 
       <div class="menu">
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">Projects</a></li>
-          <li><a href="">Technology</a></li>
-          <li><a href="">Contact</a></li>
+          <li class="menu-selections"><a href="#about-me">Home</a></li>
+          <li class="menu-selections"><a href="#projects">Projects</a></li>
+          <li class="menu-selections"><a href="#technology">Technology</a></li>
+          <li class="menu-selections"><a href="#footer">Contacts</a></li>
         </ul>
       </div>
 
-    <div class="about-me">
+    <section id="about-me" class="about-me">
+      <h1>About me</h1>
+    </section>
 
+    <section id="projects" class="projects">
+      <h1>Projects</h1>
+    </section>
+
+    <section id="technology" class="technology">
+      <h1>Technology</h1>
+    </section>
+
+    <div id="footer" class="footer">
+      <h1>footer</h1>
+      <ul class="socials">
+        <li><a href="https://www.linkedin.com/in/filimonel/" target="_blank"><i class="fab fa-linkedin-in fa-5x"></i></a></li>
+        <li><a href="https://github.com/filimonel" target="_blank"><i class="fab fa-github fa-5x"></i></a></li>
+        <li><a href="#"><i class="far fa-envelope fa-5x"></i></a></li>
+      </ul>
     </div>
+
 
   </body>
 </html>
