--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="overlay"></div>
 
         <div class="text">
-          <h3>Filimone Lea'aetoa</h3>
+          <h3>Filimone <span>Lea'aetoa</span></h3>
           <p>Full-Stack Developer based in Melbourne, Australia</p>
           <a href="#about-me">About me</a>
         </div>
@@ -42,10 +42,15 @@
       </div>
 
     <section id="about-me" class="about-me">
+
       <img src="css/images/about-me.jpg" alt="">
 
-        <p>I am a Full-Stack Developer. I've always had a passion for tech and I'm aiming at becoming a Senior Developer. My mission, as an advocate for diversity, is to contribute to creating amazing collaborative and balanced company cultures within tech where everyone will thrive. I've seen the horrible impact of poor company culture on the mental health and lives of people</p>
-      
+      <div class="text-about-me">
+        <p>
+          I am a Full-Stack Developer. I've always had a passion for tech and I'm aiming at becoming a Senior Developer. My mission, as an advocate for diversity, is to contribute to creating amazing collaborative and balanced company cultures within tech where everyone will thrive.
+        </p>
+      </div>
+
     </section>
 
     <section id="projects" class="projects">
