closing branch - updated text

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <div class="text-about-me">
         <p>
-          I am a Full-Stack Developer. I've always had a passion for tech and I'm aiming at becoming a Senior Developer. My mission, as an advocate for diversity, is to contribute to creating amazing collaborative and balanced company cultures within tech where everyone will thrive.
+          I am a Full-Stack Developer. I've always had a passion for tech and I'm aiming at becoming a Senior Developer. My mission, as an advocate for diversity, is to contribute to creating an amazing, collaborative and balanced company cultures within tech where everyone will thrive.
         </p>
       </div>
 
