centered text in hero banner

--- a/index.html
+++ b/index.html
@@ -21,25 +21,36 @@
         </header>
 
         <video src="css/images/city.mp4" muted loop autoplay></video>
-
+          
         <div class="overlay"></div>
 
         <div class="text">
           <h3>Filimone <span>Lea'aetoa</span></h3>
-          <p>Full-Stack Developer based in Melbourne, Australia</p>
-          <a href="#about-me">About me</a>
+          <p>| Full-Stack Developer based in Melbourne, Australia |</p>
+          <a href="#">Download my CV</a>
+          <embed src="/bg.mp3" loop="true" autostart="true" width="2" height="0" volume=5>
         </div>
 
       </section>
 
       <div class="menu">
         <ul>
-          <li class="menu-selections"><a href="#about-me">Home</a></li>
           <li class="menu-selections"><a href="#projects">Projects</a></li>
+          <li class="menu-selections"><a href="#about-me">About me</a></li>
           <li class="menu-selections"><a href="#technology">Technology</a></li>
-          <li class="menu-selections"><a href="#contacts">Contacts</a></li>
+          <li class="menu-selections"><a href="#contacts">Contact Me</a></li>
         </ul>
       </div>
+
+
+
+    <section id="projects" class="projects">
+      <h1>Projects</h1>
+    </section>
+
+    <section id="technology" class="technology">
+      <h1>Technology</h1>
+    </section>
 
     <section id="about-me" class="about-me">
 
@@ -52,15 +63,6 @@
       </div>
 
     </section>
-
-    <section id="projects" class="projects">
-      <h1>Projects</h1>
-    </section>
-
-    <section id="technology" class="technology">
-      <h1>Technology</h1>
-    </section>
-
     <!-- <div id="contacts" class="contacts">
       <h1>Contacts</h1>
       <ul class="socials">
