--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h3>Filimone <span>Lea'aetoa</span></h3>
           <p>| Full-Stack Developer based in Melbourne, Australia |</p>
           <a href="#">Download my CV</a>
-          <embed src="/bg.mp3" loop="true" autostart="true" width="2" height="0" volume=5>
+          <embed class="audio" src="/bg.mp3" loop="true" autostart="true" width="2" height="0" volume=2>
         </div>
 
       </section>
@@ -36,9 +36,9 @@
       <div class="menu">
         <ul>
           <li class="menu-selections"><a href="#projects">Projects</a></li>
-          <li class="menu-selections"><a href="#about-me">About me</a></li>
+          <li class="menu-selections"><a href="#about-me">About</a></li>
           <li class="menu-selections"><a href="#technology">Technology</a></li>
-          <li class="menu-selections"><a href="#contacts">Contact Me</a></li>
+          <li class="menu-selections"><a href="#contacts">Contacts</a></li>
         </ul>
       </div>
 
@@ -63,15 +63,14 @@
       </div>
 
     </section>
-    <!-- <div id="contacts" class="contacts">
+    <div id="contacts" class="contacts">
       <h1>Contacts</h1>
       <ul class="socials">
         <li><a href="https://www.linkedin.com/in/filimonel/" target="_blank"><i class="fab fa-linkedin-in fa-5x"></i></a></li>
         <li><a href="https://github.com/filimonel" target="_blank"><i class="fab fa-github fa-5x"></i></a></li>
         <li><a href="#"><i class="far fa-envelope fa-5x"></i></a></li>
       </ul>
-    </div> -->
-
-
+    </div>
+    
   </body>
 </html>
