updating projects css and js

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h3>Filimone <span>Lea'aetoa</span></h3>
           <p>| Full-Stack Developer based in Melbourne, Australia |</p>
       
-          <a class="nav-btn" href="#">Download my CV</a>
+          <a class="nav-btn" href="https://drive.google.com/drive/folders/1FnmTiGso6EJVpkLgHkb5Dmeas3zlCLMs?usp=sharing" target="_blank">Download my CV</a>
         </div>
             <!-- BG Music -->
             <audio autoplay loop volume=2>
@@ -57,7 +57,7 @@
             I am a Full-Stack Developer. I've always had a passion for tech and I'm aiming at becoming a Senior Developer. My mission, as an advocate for diversity, is to contribute to creating an amazing, collaborative and balanced company cultures within tech where everyone will thrive.
           </p>
           <br>
-          <a href="#projects"><i class="fas fa-arrow-down fa-3x"></i></a>
+          <a class="project-link active"href="#projects"><i class="fas fa-arrow-down fa-3x"></i></a>
         </div>
   
       </section>
