added more media querys

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
           <p>
             I am a Full-Stack Developer. I've always had a passion for tech and I'm aiming at becoming a Senior Developer. My mission, as an advocate for diversity, is to contribute to creating an amazing, collaborative and balanced company cultures within tech where everyone will thrive.
           </p>
-          <br>
-          <a class="project-link active"href="#projects"><i class="fas fa-arrow-down fa-3x"></i></a>
+          <a class="project-link" href="#projects"><i class="fas fa-arrow-down fa-3x"></i></a>
         </div>
   
       </section>
