created cards for project section

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           <a class="nav-btn" href="https://drive.google.com/drive/folders/1FnmTiGso6EJVpkLgHkb5Dmeas3zlCLMs?usp=sharing" target="_blank">Download my CV</a>
         </div>
             <!-- BG Music -->
-            <audio autoplay loop volume=2>
+            <!-- <audio autoplay loop volume=2>
               <source src="/bg.mp3">
-            </audio>
+            </audio> -->
 
         </div>
 
@@ -56,15 +56,85 @@
           <p>
             I am a Full-Stack Developer. I've always had a passion for tech and I'm aiming at becoming a Senior Developer. My mission, as an advocate for diversity, is to contribute to creating an amazing, collaborative and balanced company cultures within tech where everyone will thrive.
           </p>
+          <br>
+          <br>
           <a class="project-link" href="#projects"><i class="fas fa-arrow-down fa-3x"></i></a>
         </div>
-  
+
       </section>
 
       <section id="projects" class="projects">
+
         <div class="project-title">
           <h4>Projects</h4>
         </div>
+        
+        <div class="wrapper">
+          <div class="cols">
+              <div class="col" ontouchstart="this.classList.toggle('hover');">
+                <div class="container">
+                  <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
+                    <div class="inner">
+                      <p>Diligord</p>
+                      <span>Lorem ipsum</span>
+                    </div>
+                  </div>
+                  <div class="back">
+                    <div class="inner">
+                      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col" ontouchstart="this.classList.toggle('hover');">
+                <div class="container">
+                  <div class="front" style="url(https://unsplash.it/511/511/)">
+                    <div class="inner">
+                      <p>Rocogged</p>
+                      <span>Lorem ipsum</span>
+                    </div>
+                  </div>
+                  <div class="back">
+                    <div class="inner">
+                      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col" ontouchstart="this.classList.toggle('hover');">
+                <div class="container">
+                  <div class="front" style="background-image: url(https://unsplash.it/502/502/)">
+                    <div class="inner">
+                      <p>Strizzes</p>
+                      <span>Lorem ipsum</span>
+                    </div>
+                  </div>
+                  <div class="back">
+                    <div class="inner">
+                      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col" ontouchstart="this.classList.toggle('hover');">
+                <div class="container">
+                  <div class="front" style="background-image: url(https://unsplash.it/503/503/)">
+                    <div class="inner">
+                      <p>Clossyo</p>
+                      <span>Lorem ipsum</span>
+                    </div>
+                  </div>
+                  <div class="back">
+                    <div class="inner">
+                      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col" ontouchstart="this.classList.toggle('hover');">
+              </div>
+            </div>
+         </div>
       </section>
 
     
