checkpoint - updated styling - removed js unused code in scripts.js

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           <a class="nav-btn" href="https://drive.google.com/drive/folders/1FnmTiGso6EJVpkLgHkb5Dmeas3zlCLMs?usp=sharing" target="_blank">Download my CV</a>
         </div>
             <!-- BG Music -->
-            <!-- <audio autoplay loop volume=2>
+            <audio autoplay loop volume=2>
               <source src="/bg.mp3">
-            </audio> -->
+            </audio>
 
         </div>
 
@@ -68,15 +68,18 @@
         <div class="project-title">
           <h4>Projects</h4>
         </div>
-        
-        <div class="wrapper">
+        <br>
+        <!-- Card Wrapper -->
+        <div class="card-wrapper">
           <div class="cols">
               <div class="col" ontouchstart="this.classList.toggle('hover');">
+
+                <!-- Card 1 -->
                 <div class="container">
                   <div class="front" style="background-image: url(https://unsplash.it/500/500/)">
                     <div class="inner">
-                      <p>Diligord</p>
-                      <span>Lorem ipsum</span>
+                      <p>ToGather</p>
+                      <span>Your next adventure</span>
                     </div>
                   </div>
                   <div class="back">
@@ -87,11 +90,13 @@
                 </div>
               </div>
               <div class="col" ontouchstart="this.classList.toggle('hover');">
+
+                <!-- Card 2 -->
                 <div class="container">
-                  <div class="front" style="url(https://unsplash.it/511/511/)">
+                  <div class="front" style="background-image: url(https://unsplash.it/509/509/)">
                     <div class="inner">
-                      <p>Rocogged</p>
-                      <span>Lorem ipsum</span>
+                      <p>airDoor</p>
+                      <span>Explore the world</span>
                     </div>
                   </div>
                   <div class="back">
@@ -102,11 +107,13 @@
                 </div>
               </div>
               <div class="col" ontouchstart="this.classList.toggle('hover');">
+
+                <!-- Card 3 -->
                 <div class="container">
                   <div class="front" style="background-image: url(https://unsplash.it/502/502/)">
                     <div class="inner">
-                      <p>Strizzes</p>
-                      <span>Lorem ipsum</span>
+                      <p>myWeather</p>
+                      <span>Simple weather app</span>
                     </div>
                   </div>
                   <div class="back">
@@ -117,11 +124,13 @@
                 </div>
               </div>
               <div class="col" ontouchstart="this.classList.toggle('hover');">
+
+                <!-- Card 4 -->
                 <div class="container">
                   <div class="front" style="background-image: url(https://unsplash.it/503/503/)">
                     <div class="inner">
-                      <p>Clossyo</p>
-                      <span>Lorem ipsum</span>
+                      <p>iChef</p>
+                      <span>Recipes</span>
                     </div>
                   </div>
                   <div class="back">
