added devicon link to header to be able to access icons

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="icon" href="css/images/FLO.png">
     <script src="script.js" defer></script>
     <script src="https://kit.fontawesome.com/589dc5df0f.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.11.0/devicon.min.css">
+
   </head>
   <body>
     
@@ -31,9 +33,9 @@
           <a class="nav-btn" href="https://drive.google.com/drive/folders/1FnmTiGso6EJVpkLgHkb5Dmeas3zlCLMs?usp=sharing" target="_blank">Download my CV</a>
         </div>
             <!-- BG Music -->
-            <audio autoplay loop volume=2>
+            <!-- <audio autoplay loop volume=2>
               <source src="/bg.mp3">
-            </audio>
+            </audio> -->
 
         </div>
 
@@ -143,6 +145,11 @@
               <div class="col" ontouchstart="this.classList.toggle('hover');">
               </div>
             </div>
+         </div>
+
+         <!-- Program Icons -->
+         <div class="program-icons">
+
          </div>
       </section>
 
