partitioned css files into seperate files

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h3>Filimone <span>Lea'aetoa</span></h3>
           <p>| Full-Stack Developer based in Melbourne, Australia |</p>
       
-          <a class="nav-btn" href="https://drive.google.com/drive/folders/1FnmTiGso6EJVpkLgHkb5Dmeas3zlCLMs?usp=sharing" target="_blank">Download my CV</a>
+          <a class="nav-btn" href="https://drive.google.com/file/d/1UASzY-HM8iv3BtGLAD6AEUow7LEV1bW1/view?usp=sharing" target="_blank">Download my CV</a>
         </div>
 
         <!-- BG Music -->
@@ -52,7 +52,7 @@
             <a href="mailto: filimone.dev@gmail.com" target="_blank">Contact me</a></li>
         </ul>
       </div>
-
+      <!-- About me -->
       <section id="about-me" class="about-me">
 
         <img src="css/images/about-me.jpg" alt="">
@@ -67,7 +67,7 @@
         </div>
 
       </section>
-
+      <!-- Projects & Technology -->
       <section id="projects" class="projects">
 
         <div class="project-title">
