added twitter into socials and set link to twitter profile

--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
       <ul class="socials">
         <li><a href="https://www.linkedin.com/in/filimonel/" target="_blank"><i class="fab fa-linkedin-in fa-5x"></i></a></li>
         <li><a href="https://github.com/filimonel" target="_blank"><i class="fab fa-github fa-5x"></i></a></li>
-        <li><a href="#"><i class="far fa-envelope fa-5x"></i></a></li>
+        <li><a href="https://twitter.com/FLeaaetoa" target="_blank"><i class="fab fa-twitter fa-5x"></i></a></li>
+        <li><a href="mailto: filimone.dev@gmail.com" target="_blank"><i class="far fa-envelope fa-5x"></i></a></li>
       </ul>
     </div>
 
