--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </div>
 
         <!-- BG Music -->
-        <audio autoplay loop volume=2>
+        <!-- <audio autoplay loop volume=2>
           <source src="/bg.mp3">
-        </audio>
+        </audio> -->
 
         </div>
 
@@ -78,9 +78,9 @@
           <!-- Card Wrapper -->
           <div class="card-wrapper">
             <div class="cols">
-                <div class="col" ontouchstart="this.classList.toggle('hover');">
 
-                  <!-- Card 1 -->
+                <!-- Card 1 -->
+                <div class="col" ontouchstart="this.classList.toggle('hover');">
                   <a href="http://www.wegathertogather.com/" target="_blank">
                     <div class="container">
                       <div class="front" style="background-image: url(css/images/togather.png)">
@@ -96,9 +96,10 @@
                       </div>
                     </div>
                   </div>
+
+                  <!-- Card 2 -->
                   <div class="col" ontouchstart="this.classList.toggle('hover');">
                 </a>
-                  <!-- Card 2 -->
                   <a href="https://airdoor.herokuapp.com/" target="_blank" rel="noopener noreferrer">
                     <div class="container">
                       <div class="front" style="background-image: url(css/images/airdoor.png)">
@@ -109,14 +110,15 @@
                       </div>
                       <div class="back">
                         <div class="inner">
-                          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias cum repellat velit quae suscipit c.</p>
+                          <p>A fun airbnb clone - Rent a door that can teleport you anywhere, dream big!.</p>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <div class="col" ontouchstart="this.classList.toggle('hover');">
-                </a>
+
                   <!-- Card 3 -->
+                  <!-- <div class="col" ontouchstart="this.classList.toggle('hover');">
+                </a>
                   <div class="container">
                     <div class="front" style="background-image: url(https://unsplash.it/502/502/)">
                       <div class="inner">
@@ -130,10 +132,10 @@
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="col" ontouchstart="this.classList.toggle('hover');">
+                </div> -->
 
-                  <!-- Card 4 -->
+                <!-- Card 4 -->
+                <!-- <div class="col" ontouchstart="this.classList.toggle('hover');">
                   <div class="container">
                     <div class="front" style="background-image: url(https://unsplash.it/503/503/)">
                       <div class="inner">
@@ -149,7 +151,8 @@
                   </div>
                 </div>
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
-                </div>
+                </div> -->
+                
               </div>
           </div>
 
