changed hero page video

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="menu-btn"></div>
         </header>
 
-        <video src="css/images/city.mp4" muted loop autoplay></video>
+        <video src="css/images/cityHD.mp4" muted loop autoplay></video>
           
         <div class="overlay"></div>
 
