enabled music for bg

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         </div>
 
         <!-- BG Music -->
-        <!-- <audio autoplay loop volume=2>
+        <audio autoplay loop volume=2>
           <source src="/bg.mp3">
-        </audio> -->
+        </audio>
 
         </div>
 
