changed video to 1080hd replacing the 2k resolution

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
           <img class="logo" src="css/images/FLO.png" alt="">
           <div class="menu-btn"></div>
         </header>
-
-        <video src="css/images/cityHD.mp4" muted loop autoplay></video>
+        <!-- Video by Kelly Lacy from Pexels -->
+        <video src="css/images/city1080.mp4" muted loop autoplay></video>
           
         <div class="overlay"></div>
 
@@ -109,7 +109,7 @@
                       </div>
                     </div>
                   </div>
-                  
+
                 </div>
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
                 </div>
