changed video resolution

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="menu-btn"></div>
         </header>
         <!-- Video by Kelly Lacy from Pexels -->
-        <video src="css/images/cityHD.mp4" muted loop autoplay></video>
+        <video src="css/images/city1080.mp4" muted loop autoplay></video>
           
         <div class="overlay"></div>
 
