--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.11.0/devicon.min.css">
   </head>
   <body>
-    <div id="loading-wrapper">
-      <div id="loading-text">LOADING</div>
-      <div id="loading-content"></div>
+    <div id="loader-wrapper">
+      <div id="loader"></div>
+   
+          <div class="loader-section section-left"></div>
+          <div class="loader-section section-right"></div>
+      
     </div>
       <section class="showcase">
 
