--- a/index.html
+++ b/index.html
@@ -12,14 +12,7 @@
     <script src="https://kit.fontawesome.com/589dc5df0f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.11.0/devicon.min.css">
   </head>
-  <body>
-    <div id="loader-wrapper">
-      <div id="loader"></div>
-   
-          <div class="loader-section section-left"></div>
-          <div class="loader-section section-right"></div>
-      
-    </div>
+  <body class="loaded">  
       <section class="showcase">
 
         <header>
