styling updates for icons behind the card

--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
                       <div class="back">
                         <div class="inner">
                           <p>ToGather, takes the stress out of finding something to do by doing all the work for you.</p>
+                          <br>
+                          <p class="project-stack">
+                            <i class="devicon-html5-plain-wordmark colored"></i>
+                            <i class="devicon-sass-original colored"></i>
+                            <i class="devicon-javascript-plain colored"></i>
+                            <i class="devicon-ruby-plain colored"></i>
+                            <i class="devicon-rails-plain-wordmark colored"></i>
+                          </p>
                         </div>
                       </div>
                     </div>
@@ -103,6 +111,14 @@
                       <div class="back">
                         <div class="inner">
                           <p>A fun airbnb clone - Rent a door that can teleport you anywhere, dream big!.</p>
+                          <br>
+                          <p class="project-stack">
+                            <i class="devicon-html5-plain-wordmark colored"></i>
+                            <i class="devicon-sass-original colored"></i>
+                            <i class="devicon-javascript-plain colored"></i>
+                            <i class="devicon-ruby-plain colored"></i>
+                            <i class="devicon-rails-plain-wordmark colored"></i>
+                          </p>
                         </div>
                       </div>
                     </div>
@@ -116,12 +132,19 @@
                       <div class="front" style="background-image: url(css/images/weatherNow.png)">
                         <div class="inner">
                           <p>weatherNow</p>
-                          <span>Find the weather, anywhere</span>
+                          <span>Find the weather</span>
                         </div>
                       </div>
                       <div class="back">
                         <div class="inner">
                           <p>A quick and simple weather app, built with react.</p>
+                          <br>
+                          <p class="project-stack">
+                            <i class="devicon-html5-plain-wordmark colored"></i>
+                            <i class="devicon-sass-original colored"></i>
+                            <i class="devicon-javascript-plain colored"></i>
+                            <i class="devicon-react-original-wordmark colored"></i>
+                          </p>
                         </div>
                       </div>
                     </div>
