changed weatherNow to weatherFlo

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="container">
                       <div class="front" style="background-image: url(css/images/weatherNow.png)">
                         <div class="inner">
-                          <p>weatherNow</p>
+                          <p>weatherFlo</p>
                           <span>Find the weather</span>
                         </div>
                       </div>
