updated link for weatherFlow in cards

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
                 <!-- Card 3 -->
                 <div class="col" ontouchstart="this.classList.toggle('hover');">
-                  <a href="https://airdoor.herokuapp.com/" target="_blank" rel="noopener noreferrer">
+                  <a href="https://stoic-golick-0b60d5.netlify.app/" target="_blank" rel="noopener noreferrer">
                     <div class="container">
                       <div class="front" style="background-image: url(css/images/weatherNow.png)">
                         <div class="inner">
