fixed media queries - added a new project

--- a/index.html
+++ b/index.html
@@ -137,13 +137,40 @@
                       </div>
                       <div class="back">
                         <div class="inner">
-                          <p>A quick and simple weather app, built with react.</p>
+                          <p>A quick and simple weather app, built with react. <strong>Currently under maintanence</strong> </p>
                           <br>
                           <p class="project-stack">
                             <i class="devicon-html5-plain-wordmark colored"></i>
                             <i class="devicon-sass-original colored"></i>
                             <i class="devicon-javascript-plain colored"></i>
                             <i class="devicon-react-original-wordmark colored"></i>
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+
+                <!-- Card 4 -->
+                <div class="col" ontouchstart="this.classList.toggle('hover');">
+                  <a href="https://tinder-clone-999a6.web.app/" target="_blank" rel="noopener noreferrer">
+                    <div class="container">
+                      <div class="front" style="background-image: url(css/images/tinder-clone.png)">
+                        <div class="inner">
+                          <p>Tinder Clone</p>
+                          <span>Find the weather</span>
+                        </div>
+                      </div>
+                      <div class="back">
+                        <div class="inner">
+                          <p>A tinder clone, built with React & Firebase.</p>
+                          <br>
+                          <p class="project-stack">
+                            <i class="devicon-html5-plain-wordmark colored card-icon"></i>
+                            <i class="devicon-sass-original colored "></i>
+                            <i class="devicon-javascript-plain colored"></i>
+                            <i class="devicon-react-original-wordmark colored"></i>
+                            <i class="devicon-firebase-plain colored"></i>
                           </p>
                         </div>
                       </div>
