updated card titile

--- a/index.html
+++ b/index.html
@@ -157,13 +157,13 @@
                     <div class="container">
                       <div class="front" style="background-image: url(css/images/tinder-clone.png)">
                         <div class="inner">
-                          <p>Tinder Clone</p>
+                          <p>Minder</p>
                           <span>Find the weather</span>
                         </div>
                       </div>
                       <div class="back">
                         <div class="inner">
-                          <p>A tinder clone, built with React & Firebase.</p>
+                          <p>A tinder clone for anime characters, built with React & Firebase.</p>
                           <br>
                           <p class="project-stack">
                             <i class="devicon-html5-plain-wordmark colored card-icon"></i>
