fixed incorrect text in project card

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                     <div class="container">
                       <div class="front" style="background-image: url(css/images/tinder-clone.png)">
                         <div class="inner">
-                          <p>Minder</p>
-                          <span>Find the weather</span>
+                          <p>minder</p>
+                          <span>Meet anime characters</span>
                         </div>
                       </div>
                       <div class="back">
