fixed spelling errors in index.html

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                       </div>
                       <div class="back">
                         <div class="inner">
-                          <p>A fun airbnb clone - Rent a door that can teleport you anywhere, dream big!.</p>
+                          <p>A fun airbnb clone - Rent a door that can teleport you anywhere, dream big!</p>
                           <br>
                           <p class="project-stack">
                             <i class="devicon-html5-plain-wordmark colored"></i>
@@ -137,7 +137,7 @@
                       </div>
                       <div class="back">
                         <div class="inner">
-                          <p>A quick and simple weather app, built with react. <strong>Currently under maintanence</strong> </p>
+                          <p>A quick and simple weather app, built with react. <strong>Currently under maintanence</strong>.</p>
                           <br>
                           <p class="project-stack">
                             <i class="devicon-html5-plain-wordmark colored"></i>
